--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "DEBUG=ironshop:* nodemon ./bin/www"
   },
   "author": "",
   "license": "ISC",
@@ -21,5 +22,8 @@
     "mongoose": "^5.0.4",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.12"
   }
 }
