--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.0.4",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
