--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -18,6 +18,7 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-ejs-layouts": "^2.3.1",
+    "express-flash": "git://github.com/RGBboy/express-flash.git",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.4",
     "morgan": "~1.9.0",
