--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^5.0.4",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "connect-flash": "^0.1.1",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
