feat: base de datos remota

--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
+    "start-dev": "nodemon ./bin/www",
     "dev": "DEBUG=ironshop:* nodemon ./bin/www"
   },
   "author": "",
@@ -12,9 +13,11 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^5.0.0",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-ejs-layouts": "^2.3.1",
@@ -24,7 +27,6 @@
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "connect-flash": "^0.1.1",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
