--- a/starter-code/.env
+++ b/starter-code/.env
@@ -1,1 +1,1 @@
-#MONGO_URI=mongodb://admin:admin@ds145438.mlab.com:45438/heroku_prmzw65q
+MONGO_URI=mongodb://ironshop:ironshop>@ds245478.mlab.com:45478/ironshop
